# zen

./: .gitignore  README.ZH.md  README.md  gitignore
sample/app-android/: settings.gradle
sample/app-android/app/: AndroidManifest.xml  CMakeLists.txt  build.gradle
sample/app-android/app/res/values/: strings.xml
sample/app-gles/: main.cpp
sample/app-ios/: main.cpp
sample/app-opengles/: main.cpp
sample/audio_player/: README.md  main.mm
sample/debug/: README.md
sample/game/: .gitignore
sample/gles_debug/: main.cpp
sample/gles_src/: MyDrawNode.h  MyDrawNodeMT.h  MyDrawNodeMT.mm  MyRootScene.cpp  MyRootScene.hpp  MySprite.h  ShaderTypes.h  Shaders.metal  a.raw  main.cpp  main_metal.cpp
sample/image_convert/: README.md  main.mm
sample/network/: main.cpp
sample/truetype/: README.md
source/: macro.h
source/basic/: README.md
source/third/: README.md
third/zen-al/: zen_al.h  zen_al_player.cpp  zen_al_source.h
third/zen-freetype/: zen_ft_library.cpp  zen_ft_library.h  zen_ft_render.cpp  zen_ft_render.h
third/zen-gles2/: zen_egl.cpp  zen_egl.h  zen_gles2.h  zen_gles2_buffer.h  zen_gles2_enum.h  zen_gles2_frame.h  zen_gles2_image2d.h  zen_gles2_prepare.h  zen_gles2_program.h  zen_gles2_render.cpp  zen_gles2_render.h  zen_gles2_shader.h  zen_gles2_shader_color.cpp  zen_gles2_shader_color.h  zen_gles2_texture.h  (+6 more)
zen-app/: zen_app_config.h  zen_app_delegate.h  zen_app_runtime.h
zen-audio/: zen_audio.h  zen_audio_common.h  zen_audio_player.cpp  zen_audio_player.h  zen_audio_raw.cpp  zen_audio_raw.h  zen_audio_wav.cpp  zen_audio_wav.h
zen-core/: zen_endian.h  zen_meta.h  zen_os.h  zen_safety.h
zen-cpp/: zen_exception.h  zen_log.h  zen_meta.h  zen_object.h
zen-image/: README.txt  zen_color.h  zen_image.h  zen_image_raw.cpp  zen_image_raw.h
zen-math/: zen_bezier.h  zen_fraction.h  zen_matrix.h  zen_numerical.h  zen_quaternion.h  zen_random.h  zen_rect.h  zen_ticker.h  zen_vector.h
zen-net/: zen_atom_queue.h  zen_ip.cpp  zen_ip.h  zen_net.h  zen_net_define.h  zen_poll.cpp  zen_socket.cpp  zen_socket.h
zen-string/: zen_base64.cpp  zen_cast.h  zen_file.h  zen_localization.h  zen_md5.cpp  zen_md5.h  zen_urlcoding.h
zen-system/: zen_system.h
zen-vap2d/: zen_vap2d.h  zen_vap2d_doodle.cpp  zen_vap2d_doodle.h  zen_vap2d_event.h  zen_vap2d_gles2.cpp  zen_vap2d_gles2.h  zen_vap2d_label.cpp  zen_vap2d_label.h  zen_vap2d_layer.cpp  zen_vap2d_layer.h  zen_vap2d_node.cpp  zen_vap2d_node.h  zen_vap2d_particle.cpp  zen_vap2d_particle.h  zen_vap2d_root.cpp  zen_vap2d_root.h  zen_vap2d_sprite.cpp  zen_vap2d_sprite.h  zen_vap2d_texture.cpp  zen_vap2d_texture.h
zen-view/: zen_view_gl_label.cpp  zen_view_gl_label.h  zen_view_gl_layer.cpp  zen_view_gl_layer.h  zen_view_gl_rectangle.h  zen_view_gl_resource.h  zen_view_gl_schedule.cpp  zen_view_gl_sprite.cpp  zen_view_gl_sprite.h
(+430 files in other folders)
